# e-commerce

./: README.md  notebook_eda.ipynb  notebook_essais.ipynb  notebook_simulation.ipynb  pyproject.toml  queries.sql
customer-segmentation/notebooks/: notebook_clustering.ipynb  notebook_data_drift.ipynb  notebook_eda.ipynb  notebook_essais.ipynb  notebook_exploration.ipynb  notebook_simulation.ipynb
customer-segmentation/notebooks/utils/: __init__.py  plotsettings.py  preprocessing.py
sql/: query_1  query_2  query_3  query_4
