[tool.poetry]
name = "customer-segmentation"
version = "0.1.0"
description = ""
authors = ["victorien <victorienmichel3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
missingno = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"